Tercer commit: cambio de input por textarea en el recuadro de description

--- a/index2.html
+++ b/index2.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="descripcion">
                         <label for="descripcion"></label>
-                        <input class="entradaFechaEspecie descripcion"type="text" id="descripcion" name="descripcion" placeholder="Descripción">
+                        <textarea class="entradaFechaEspecie descripcion"type="text" id="descripcion" name="descripcion" placeholder="Descripción"></textarea>
                     </div>
                 </article>
                 <article class="columnRight">
