Clase 17: Pseudo Clases y Pseudo Elementos

--- a/index2.html
+++ b/index2.html
@@ -22,9 +22,9 @@
         <article class="header3">
             <nav>
                 <ul class="categorias" type="none">
-                    <li class="titulo3">Contacto</li>
-                    <li class="titulo3">Registrarme</li>
-                    <li class="titulo3">Ingresar</li>
+                    <li class="titulo3"><a href="www.google.com" target="_blank">Contacto</a></li>
+                    <li class="titulo3"><a href="www.google.com" target="_blank">Registrarme</a></li>
+                    <li class="titulo3"><a href="www.google.com" target="_blank">Ingresar</a></li>
                 </ul>    
             </nav>
         </article>
@@ -36,7 +36,7 @@
             <section class="formularioInterno">
                 <article class="columnLeft">
                     <div class="entrada">
-                        <label for="nombre">*Nombre</label>
+                        <label class="nombreespecie" for="nombre">Nombre</label>
                         <input class="entradaFechaEspecie" type="text" id="nombre" name="nombre" required>
                     </div>
                     <div class="fecha">
@@ -45,12 +45,12 @@
                     </div>
                     <div class="descripcion">
                         <label for="descripcion"></label>
-                        <textarea class="entradaFechaEspecie descripcion"type="text" id="descripcion" name="descripcion" placeholder="Descripción"></textarea>
+                        <textarea class="entradaFechaEspecie descripcion"type="text" id="descripcion" name="descripcion" placeholder="Descripción"></textarea> 
                     </div>
                 </article>
                 <article class="columnRight">
                     <div class="especie">
-                        <label class="especie">*Especie</label>
+                        <label class="nombreespecie">Especie</label>
                         <select class="entradaFechaEspecie" name="especie" id="especie" required>
                             <option value="NA">Especie</option>
                             <option value="SSP">Sin poderes</option>
